fix overflow in vivo v29e

--- a/styles/style.css
+++ b/styles/style.css
@@ -80,7 +80,6 @@ main{
     margin: auto;
     width: max-content;
     border-radius: 5px;
-    border: 1px solid red;
 }
 
 .student_info{
@@ -89,7 +88,6 @@ main{
     justify-content: space-between;
     padding: 0.3em;
     margin-bottom: 0.75em;
-    border: 1px solid blue;
 }
 
 .student_info__first p,.student_info__second p  {
@@ -122,7 +120,6 @@ main{
     border-radius: 5px 5px 0 0;
     margin-inline: auto;
     margin-bottom: 1em;
-    border: 1px solid yellow;
 }
 
 
